fixing collapsable header

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -47,12 +47,31 @@
 
 // header-props
 
-.header-props-toggler { display: none; }
+.header-props-toggler, .header-props-sm { 
+	visibility: hidden;
+	display: none;
+}
 
 @media (max-width: 800px) {
+	.application-header {
+		transition: height 300ms ease-out;
+	}
+
+	.application-header.header-props-open {
+		flex-direction: column;
+		height: 103px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		transition: height 300ms ease;
+	}
+		
 	.header-props-toggler{
+		color: $link-color;
+		visibility: visible;
 		display: inline-flex;
 		align-items: center;
+		align-self: center;
 		font-size: 1.5rem;
 		margin-left: auto !important;
 		transform: rotate(0deg);
@@ -65,6 +84,7 @@
 	.header-props {
 		display: none !important;
 		&-sm {
+			visibility: visible;
 			display: flex;
 			justify-content: right;
 			margin-left: auto !important;
